Add utilities tests

--- a/PTI.Reliance.Windows.Test/PTI.Reliance.Windows.Test.csproj
+++ b/PTI.Reliance.Windows.Test/PTI.Reliance.Windows.Test.csproj
@@ -45,6 +45,7 @@
     </Compile>
     <Compile Include="TestReliancePrinter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UtilitiesTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
