Add explicit page size support
On top of supporting autosize and "respect whatever I told Windows to use", this new property allows explicitly setting the page size in mm. The size is not 100% accurate and needs to be tuned but it is close enough for POC.

--- a/PrinterTest/PrinterTest.csproj
+++ b/PrinterTest/PrinterTest.csproj
@@ -4,15 +4,17 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{70961E9E-C4A0-423F-BFF5-6E9E775AA295}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <ProjectGuid>{105AAC37-BC44-4654-9895-2AAF91165715}</ProjectGuid>
+    <ProjectTypeGuids>{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>PTI.Reliance.Windows</RootNamespace>
-    <AssemblyName>PTI.Reliance.Windows</AssemblyName>
+    <RootNamespace>PrinterTest</RootNamespace>
+    <AssemblyName>PrinterTest</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -22,6 +24,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -35,21 +38,21 @@
     <Reference Include="System.Drawing" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Document.cs" />
-    <Compile Include="IContent.cs" />
-    <Compile Include="IDocument.cs" />
-    <Compile Include="ImageContent.cs" />
-    <Compile Include="IPrinter.cs" />
-    <Compile Include="PageSizeMillimeters.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ReliancePrinter.cs" />
-    <Compile Include="TextContent.cs" />
-    <Compile Include="Utilities.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\PTI.Reliance.Windows\PTI.Reliance.Windows.csproj">
+      <Project>{70961E9E-C4A0-423F-BFF5-6E9E775AA295}</Project>
+      <Name>PTI.Reliance.Windows</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Resources" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
